# Construct

./: Cargo.toml
notes/: structure.md
resources/: debug.stn  meta.stn  settings.stn  test.stn
src/: main.rs  shader.rs
